      locale.
  * GTK and KDE frontends:
    - Move the keymap page after the location page, so that in future the
      keymap page can be initialised using data for the selected country.
  * Make espresso.tz.SystemTzInfo.dst() pretend that DST is not in effect if
    we have no DST information, rather than returning the more correct None;
    this allows fromutc() to be used reliably.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  8 Mar 2006 19:00:55 +0000

espresso (0.99.25) dapper; urgency=low

  * GTK frontend:
    - Add a format checkbox to the mountpoints page (closes: Malone #32065).
      Requires partman (>= 78ubuntu1+8).
  * Patched up KDE frontend to avoid breaking it too badly (I hope) until
    corresponding UI is added there too.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  8 Mar 2006 14:59:41 +0000

espresso (0.99.24) dapper; urgency=low

  * Fix espresso.tz.SystemTzInfo to work for datetime.datetime.now(tzinfo).
  * GTK frontend:
    - Improve headings and spacing on advanced partitioning pages.
    - Remove more text that claims /home will not be formatted.
    - Rearrange help text on advanced partitioning pages to allow for more
      space on the screen where it matters.
    - Show the current time in the selected timezone on the location page.
    - Translate more strings from Spanish to English.
    - Use HH:MM for UTC offsets rather than fractions of hours.
    - Refer to UTC offsets as GMT offsets instead; it's not quite 100%
      accurate, but (we think) more widely understood.
    - Add a border around the timezone map.
    - Change identification page heading to "Who are you?".
    - Reorganise locale page so that the language select box is in the
      middle rather than at the left-hand side, and shorter.
    - Drop the notebook border.
    - Remove the expander and the "Details" label from the summary page, per
      feedback from the UI sprint.
    - Make the first click on the timezone map zoom in but not select a