@@ -26,49 +26,6 @@ def part_label(dev):
     return name
 
 
-def make_yaboot_header(target, target_dev):
-    """builds yaboot header config-file."""
-
-    import re
-
-    yaboot_conf = open(target + '/etc/yaboot.conf', 'w')
-    timeout = 50
-
-    partition_regex = re.compile(r'[0-9]+$')
-    partition = partition.search(target_dev).group()
-
-    device_regex = re.compile(r'/dev/[a-z]+')
-    device = device_regex.search(target_dev).group()
-    device_of = subprocess.Popen(['ofpath', device], stdout=subprocess.PIPE).communicate()[0]
-
-    boot_pipe1 = subprocess.Popen(['/sbin/fdisk', '-l', device], stdout=subprocess.PIPE)
-    boot_pipe2 = subprocess.Popen(['grep', 'Apple_Bootstrap'], stdin=boot_pipe1.stdout, stdout=subprocess.PIPE)
-    boot_stdout = boot_pipe2.communicate()[0]
-    boot_partition_regex = re.compile(r'/dev/[a-z]+[0-9]+')
-    boot_partition = boot_partition_regex.search(boot_stdout).group()
-
-    yaboot_conf.write(' \
-    ## yaboot.conf generated by the Ubuntu installer \
-    ## \
-    ## run: "man yaboot.conf" for details. Do not make changes until you have!! \
-    ## see also: /usr/share/doc/yaboot/examples for example configurations. \
-    ## \
-    ## For a dual-boot menu, add one or more of: \
-    ## bsd=/dev/hdaX, macos=/dev/hdaY, macosx=/dev/hdaZ \
-    \
-    boot=%s \
-    device=%s \
-    partition=%s \
-    root=%s \
-    timeout=%s \
-    install=/usr/lib/yaboot/yaboot \
-    magicboot=/usr/lib/yaboot/ofboot \
-    enablecdboot \
-    ' % (boot_partition, device_of, partition, target_dev, timeout) )
-
-    yaboot_conf.close()
-
-
 def distribution():
     """Returns the name of the running distribution."""
 
